--- a/dubbo-remoting/pom.xml
+++ b/dubbo-remoting/pom.xml
@@ -35,5 +35,6 @@
 		<module>dubbo-remoting-p2p</module>
 		<module>dubbo-remoting-http</module>
 		<module>dubbo-remoting-zookeeper</module>
-    </modules>
+    <module>dubbo-remoting-nio</module>
+  </modules>
 </project>
